--- a/main.html
+++ b/main.html
@@ -6,11 +6,11 @@
 	<link rel="stylesheet" href="./styles.css">
 </head>
 
-<body>
+<body id="raj2">
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<h1 id="rj1">Welcome to the new Era of Artificial intelligence</h1>
 </body>
 
 </html>
