--- a/main.html
+++ b/main.html
@@ -6,7 +6,6 @@
 	<link rel="stylesheet" href="./styles.css">
 	<style>
 		#rj1{
-	text-align:center;
 	color:white;
 }
 #raj2{
@@ -21,7 +20,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<h1 id="rj1">Welcome to the new Era of Artificial intelligence</h1>
+<h1 style="text-align:center" id="rj1">Welcome to the new Era of Artificial intelligence</h1>
 </body>
 
 </html>
